Fixed network-channel rule-link wraping

--- a/frontend/static/css/components/network.css
+++ b/frontend/static/css/components/network.css
@@ -42,6 +42,14 @@
         align-items: flex-start;
     }
 
+        .network-channels__item > .network-channel {
+            padding-top: 10px;
+        }
+
+        .network-channels__item > .network-channel:first-child {
+            padding-top: 20px;
+        }
+
         .network-channel {
             position: relative;
             display: block;
